--- a/.github/workflows/generate-pb.yml
+++ b/.github/workflows/generate-pb.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: cpp-public
-          path: ./target/cpp-public
+          path: ./protos/
