--- a/.github/workflows/generate-pb.yml
+++ b/.github/workflows/generate-pb.yml
@@ -16,3 +16,25 @@ jobs:
         with:
           name: cpp-public
           path: ./protos/
+   generate-nanopb-files:
+     runs-on: ubuntu-lates
+     steps:
+       - uses: actions/checkout@v3
+       - uses: actions/setup-python@v4
+         with:
+           python-version: '3.10'
+       - name: install libraries
+         run: |
+           python -m pip install protobuf grpcio-tools
+       - name: Clone nanopb
+         run: |
+           git clone https://github.com/nanopb/nanopb.git
+       - name: generate
+         run: |
+           python ../nanopb/generator/nanopb_generator.py aisaaccommand.proto
+         working-directory: ./protos
+       - name: save artifacts
+         uses: actions/upload-artifact@v3
+         with:
+           name: nanopb-files
+           path: ./protos/
